--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     margin: 60px;
 }
 #body2{
-    background-image: url("/background.jpeg");
+    background-image: url("background.jpeg");
     background-size: cover;
     margin: 60px;
   
@@ -42,7 +42,7 @@ body{
     width: 100%;
     height: 10%;
     background-color: sienna;
-    background-image: url("/mount.jpg");
+    background-image: url("mount.jpg");
     padding: 10px;
     
 }
@@ -55,25 +55,25 @@ body{
 .container4{
     display: flex;
     width: 50%;
-    background-image: url("/back.jpg");
+    background-image: url("back.jpg");
     background-position-x: right;
     
     
 }
 .container5{
     width: 30%;
-    background-image: url("/back.jpg");
+    background-image: url("back.jpg");
     background-position: right;
 }
 .container6{
-    background-image: url("/goonies1.jpg");
+    background-image: url("goonies1.jpg");
     width: 30%;
     margin-left: auto;
     margin-right: auto;
 }
 .container7{
     display: flex;
-    background-image: url("/funk.jpg");
+    background-image: url("funk.jpg");
     padding-bottom: 10px;
     height: 20px;
     border-bottom-left-radius: 25%;
@@ -89,7 +89,7 @@ body{
 
 #header{
     flex-wrap: wrap;
-    background-image: url("/blue.webp");
+    background-image: url("blue.webp");
     background-size: cover;
     color:white;
     text-align: center;
@@ -144,7 +144,7 @@ h4{
     display: flex;
     padding: 10px;
     justify-content: center;
-    background-image: url("/background.jpeg");
+    background-image: url("background.jpeg");
     margin:5px
 } 
 #main3{
@@ -271,7 +271,7 @@ h2{
 
 .containera{
     display: flex;
-    background-image: url("/blue.webp");
+    background-image: url("blue.webp");
     width: 100%;
     height: 20%;
     
@@ -385,7 +385,7 @@ h2{
     width: 100%;
     height: 10%;
     background-color: sienna;
-    background-image: url("/legomount.jpg");
+    background-image: url("legomount.jpg");
     padding: 10px;
 }
 .containerlego2{
@@ -417,7 +417,7 @@ h2{
     text-align: center;
 }
 #h1lego{
-    background-image: url("/blue.webp");
+    background-image: url("blue.webp");
     color: honeydew;
     border: 2px solid red;
     border-radius: 15px 50px 30px;
